input: touchscreen: add touch screen of gsl3673 for rk3399-evb
Change-Id: I16a4e44c75a16aefa153b002bce83392522c7d30
Signed-off-by: buluess.li <buluess.li@rock-chips.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -340,6 +340,11 @@ config TOUCHSCREEN_GSLX680_VR
 	help
 	  gslX680 touchpad driver for VR
 
+config TOUCHSCREEN_GSL3673
+	tristate "gsl3673 touchpad driver for evb"
+	help
+	  gsl3673 touchpad driver for evb
+
 config TOUCHSCREEN_GT9XX
 	tristate "Goodix gt9xx support for rockchip platform"
 	depends on I2C && ARCH_ROCKCHIP
