ARM: configs: enable AP6XXX WiFi in rockchip_linux_defconfig
This patch enable rkwifi and AP6XXX series wifi chips config

Change-Id: I663df14011ce8402566d62c9e4d9b9a11b274fbe
Signed-off-by: Nickey Yang <nickey.yang@rock-chips.com>

--- a/arch/arm/configs/rockchip_linux_defconfig
+++ b/arch/arm/configs/rockchip_linux_defconfig
@@ -186,6 +186,8 @@ CONFIG_HOSTAP_FIRMWARE=y
 CONFIG_HOSTAP_FIRMWARE_NVRAM=y
 CONFIG_RT2X00=y
 CONFIG_RT2800USB=y
+CONFIG_WL_ROCKCHIP=y
+CONFIG_AP6XXX=y
 CONFIG_MWIFIEX=y
 CONFIG_MWIFIEX_SDIO=y
 # CONFIG_INPUT_MOUSEDEV is not set
