arm64: dts: rockchip: Enable rga power domain for rk3399
Change-Id: Ib75fe7c32b84a210f9e344d37de302888343731a
Signed-off-by: Zikim,Wei <wzq@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399.dtsi
@@ -1143,6 +1143,7 @@
 		clock-names = "aclk", "hclk", "sclk";
 		resets = <&cru SRST_RGA_CORE>, <&cru SRST_A_RGA>, <&cru SRST_H_RGA>;
 		reset-names = "core", "axi", "ahb";
+		power-domains = <&power RK3399_PD_RGA>;
 		status = "disabled";
 	};
 
