--- a/arch/arm64/boot/dts/rockchip/rk3399.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399.dtsi
@@ -322,6 +322,7 @@
 			      "pclk_mac";
 		resets = <&cru SRST_A_GMAC>;
 		reset-names = "stmmaceth";
+		power-domains = <&power RK3399_PD_GMAC>;
 		status = "disabled";
 	};
 
