ARM64: dts: rk3399: support fusb302 for box rev1/2
Change-Id: Iea3f9e673a08bc959b3f57d169fff738ce746645
Signed-off-by: Meng Dongyang <daniel.meng@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-box.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-box.dtsi
@@ -727,6 +727,7 @@
 
 &u2phy0 {
 	status = "okay";
+	extcon = <&fusb0>;
 
 	u2phy0_otg: otg-port {
 		status = "okay";
@@ -783,6 +784,7 @@
 
 &usbdrd_dwc3_0 {
 	dr_mode = "peripheral";
+	extcon = <&fusb0>;
 	status = "okay";
 };
 
@@ -793,6 +795,10 @@
 &usbdrd_dwc3_1 {
 	dr_mode = "host";
 	status = "okay";
+};
+
+&tcphy0{
+	extcon = <&fusb0>;
 };
 
 &pwm2 {
