--- a/arch/arm64/boot/dts/rockchip/rk3399-box-rev1.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-box-rev1.dts
@@ -98,4 +98,24 @@
 				<4 13 RK_FUNC_1 &pcfg_pull_up_8ma>;
 		};
 	};
+
+	fusb30x {
+		fusb0_int: fusb0-int {
+			rockchip,pins =
+				<1 2 RK_FUNC_GPIO &pcfg_pull_up>;
+		};
+	};
+};
+
+&i2c4 {
+	status = "okay";
+	fusb0: fusb30x@22 {
+		compatible = "fairchild,fusb302";
+		reg = <0x22>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&fusb0_int>;
+		vbus-5v-gpios = <&gpio1 3 GPIO_ACTIVE_LOW>;
+		int-n-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
+		status = "okay";
+	};
 };
