--- a/arch/arm64/boot/dts/rockchip/rk3399-excavator-sapphire-edp.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-excavator-sapphire-edp.dts
@@ -42,8 +42,8 @@
 
 /dts-v1/;
 
-#include "rk3399-excavator-sapphire.dtsi"
 #include <dt-bindings/input/input.h>
+#include "rk3399-excavator-sapphire.dtsi"
 #include "rk3399-android.dtsi"
 
 / {
@@ -89,6 +89,15 @@
 	};
 };
 
+&edp_rk_fb {
+	status = "okay";
+};
+
+&hdmi_rk_fb {
+	status = "okay";
+	rockchip,hdmi_video_source = <DISPLAY_SOURCE_LCDC1>;
+};
+
 &i2c1 {
 	status = "okay";
 
@@ -100,6 +109,10 @@
 		irq_gpio_number = <&gpio1 20 IRQ_TYPE_LEVEL_LOW>;
 		rst_gpio_number = <&gpio4 22 GPIO_ACTIVE_HIGH>;
 	};
+};
+
+&pwm0 {
+	status = "okay";
 };
 
 &rk_screen {
@@ -116,11 +129,13 @@
 			rockchip,delay = <10>;
 		};
 
-		/*lcd_cs: lcd-cs {
+		/*
+		lcd_cs: lcd-cs {
 			rockchip,power_type = <GPIO>;
-			gpios = <&gpio0 21 GPIO_ACTIVE_HIGH>;//GPIO_C5 = 21
+			gpios = <&gpio0 21 GPIO_ACTIVE_HIGH>;
 			rockchip,delay = <10>;
-		};*/
+		};
+		*/
 
 		lcd_rst: lcd-rst {
 			rockchip,power_type = <GPIO>;
@@ -131,18 +146,5 @@
 };
 
 &vopl_rk_fb {
-	status = "okay";
-};
-
-&edp_rk_fb {
-	status = "okay";
-};
-
-&hdmi_rk_fb {
-	status = "okay";
-	rockchip,hdmi_video_source = <DISPLAY_SOURCE_LCDC1>;
-};
-
-&pwm0 {
 	status = "okay";
 };
