arm64: dts: rockchip: disabled the dw-hdmi-audio by default for Sapphire board
The dw-hdmi-audio driver could only work on FB dw-hdmi driver, we can't
use it on DRM display sub-system. So I think it's better to disable the
dw-hdmi-audio by default for Sapphire board, but enable this device node
for excavator-edp and excavator-box boards.

Change-Id: I8c2639d535510f1092a3da02e008986394608998
Signed-off-by: Yakir Yang <ykk@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-sapphire-excavator-box.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-sapphire-excavator-box.dts
@@ -58,6 +58,10 @@
 	native-mode = <&timing1>; /* 1080p */
 };
 
+&dw_hdmi_audio {
+	status = "okay";
+};
+
 &fb {
 	rockchip,disp-mode = <NO_DUAL>;
 	rockchip,disp-policy = <DISPLAY_POLICY_BOX>;
@@ -66,6 +70,10 @@
 &hdmi_rk_fb {
 	status = "okay";
 	rockchip,hdmi_video_source = <DISPLAY_SOURCE_LCDC0>;
+};
+
+&hdmi_sound {
+	status = "okay";
 };
 
 &pwm3 {
