--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ test:
   pre:
     - sudo cp tools/lkl/bin/i686-w64-mingw32-* /usr/bin:
         parallel: true
+    - git diff origin/master | scripts/checkpatch.pl -
 
   override:
     - cd tools/lkl && make clean:
