circle.yml: ignore FILE_PATH_CHANGES during checkpatch
It has too many false positives, e.g. it does not check if MAINTAINERS
is not already covering the added/deleted/moved files.

Signed-off-by: Octavian Purdila <octavian.purdila@intel.com>

--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,7 @@ test:
   pre:
     - sudo cp tools/lkl/bin/i686-w64-mingw32-* /usr/bin:
         parallel: true
-    - git diff origin/master | scripts/checkpatch.pl -
+    - git diff origin/master | scripts/checkpatch.pl --ignore FILE_PATH_CHANGES -
 
   override:
     - cd tools/lkl && make clean:
