circle.yml: fix checkpatch tests
We need to first fetch origin otherwise Circle's cache may have an old
master which will cause the git diff between the current tree and the
master to not be accurate.

Signed-off-by: Octavian Purdila <octavian.purdila@intel.com>

--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ test:
   pre:
     - sudo cp tools/lkl/bin/i686-w64-mingw32-* /usr/bin:
         parallel: true
+    - git fetch origin
     - git diff origin/master | scripts/checkpatch.pl --ignore FILE_PATH_CHANGES -
 
   override:
