--- a/arch/arm64/boot/dts/rockchip/rk3399.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399.dtsi
@@ -439,6 +439,8 @@
 			      "aclk_usb3otg0", "aclk_usb3_rksoc_axi_perf",
 			      "aclk_usb3", "aclk_usb3_grf";
 		power-domains = <&power RK3399_PD_USB3>;
+		resets = <&cru SRST_A_USB3_OTG0>;
+		reset-names = "usb3-otg";
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
@@ -468,6 +470,8 @@
 			      "aclk_usb3otg1", "aclk_usb3_rksoc_axi_perf",
 			      "aclk_usb3", "aclk_usb3_grf";
 		power-domains = <&power RK3399_PD_USB3>;
+		resets = <&cru SRST_A_USB3_OTG1>;
+		reset-names = "usb3-otg";
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
