arm64: dts: rockchip: enable Type-C phy for rk3399 evb/box
Change-Id: Idb2f919e008c37aa030c114c9a11df2d69126e99
Signed-off-by: Wu Liang feng <wulf@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-box.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-box.dtsi
@@ -716,6 +716,11 @@
 	temperature = <105000>;
 };
 
+&tcphy0 {
+	extcon = <&fusb0>;
+	status = "okay";
+};
+
 &tsadc {
 	/* tshut mode 0:CRU 1:GPIO */
 	rockchip,hw-tshut-mode = <1>;
@@ -795,10 +800,6 @@
 &usbdrd_dwc3_1 {
 	dr_mode = "host";
 	status = "okay";
-};
-
-&tcphy0{
-	extcon = <&fusb0>;
 };
 
 &pwm2 {
