arm64: dts: rockchip: use extcon for usb2/usb3 on rk3399 evb/box
Change-Id: I582381af1dfc5c7bb06736d3a92d2636b1523863
Signed-off-by: Wu Liang feng <wulf@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-evb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-evb.dtsi
@@ -397,6 +397,7 @@
 
 &u2phy0 {
 	status = "okay";
+	extcon = <&fusb0>;
 
 	u2phy0_otg: otg-port {
 		status = "okay";
@@ -410,6 +411,7 @@
 
 &u2phy1 {
 	status = "okay";
+	extcon = <&fusb1>;
 
 	u2phy1_otg: otg-port {
 		status = "okay";
@@ -448,6 +450,7 @@
 };
 
 &usbdrd3_0 {
+	extcon = <&fusb0>;
 	status = "okay";
 };
 
@@ -456,6 +459,7 @@
 };
 
 &usbdrd3_1 {
+	extcon = <&fusb1>;
 	status = "okay";
 };
 
