--- a/arch/arm64/boot/dts/rockchip/rk3399-vr-android.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-vr-android.dts
@@ -757,6 +757,15 @@
 		poll_delay_ms = <30>;
 		layout = <1>;
 	};
+
+	fusb0: fusb30x@22 {
+		compatible = "fairchild,fusb302";
+		reg = <0x22>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&fusb0_int>;
+		int-n-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
+		status = "okay";
+	};
 };
 
 &i2c5 {
@@ -844,6 +853,7 @@
 };
 
 &u2phy0 {
+	extcon = <&fusb0>;
 	status = "okay";
 
 	u2phy0_otg: otg-port {
@@ -896,6 +906,7 @@
 };
 
 &usbdrd3_0 {
+	extcon = <&fusb0>;
 	status = "okay";
 };
 
@@ -909,6 +920,11 @@
 
 &usbdrd_dwc3_1 {
 	status = "okay";
+};
+
+&tcphy0 {
+	status = "okay";
+	extcon = <&fusb0>;
 };
 
 &pwm0 {
@@ -1033,6 +1049,12 @@
 	ak8963 {
 		ak8963_irq_gpio: ak8963-irq-gpio {
 			rockchip,pins = <1 0 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+	};
+
+	fusb30x {
+		fusb0_int: fusb0-int {
+			rockchip,pins = <1 2 RK_FUNC_GPIO &pcfg_pull_up>;
 		};
 	};
 };
