arm64: dts: rk3399-sapphire-excavator-box: add test-power
Change-Id: I7c26c8050f27e898ae951fc118fc717cd0b10fce
Signed-off-by: Jianhong Chen <chenjh@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-sapphire-excavator-box.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-sapphire-excavator-box.dts
@@ -48,6 +48,10 @@
 
 / {
 	compatible = "rockchip,rk3399-excavator-box", "rockchip,rk3399";
+
+	test-power {
+		status = "okay";
+	};
 };
 
 &rk_screen {
