arm64: dts: rk3399-sapphire-excavator-edp: add test-power
Change-Id: Iaa8632fa7faaefcf05eab96d175deab7329143c3
Signed-off-by: Jianhong Chen <chenjh@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-sapphire-excavator-edp.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-sapphire-excavator-edp.dts
@@ -48,6 +48,10 @@
 
 / {
 	compatible = "rockchip,rk3399-excavator-edp", "rockchip,rk3399";
+
+	test-power {
+		status = "okay";
+	};
 };
 
 &backlight {
