--- a/drivers/phy/Kconfig
+++ b/drivers/phy/Kconfig
@@ -350,6 +350,14 @@ config PHY_ROCKCHIP_TYPEC
 	help
 	  Enable this to support the Rockchip USB TYPEC PHY.
 
+config PHY_ROCKCHIP_PCIE
+	tristate "Rockchip PCIe PHY Driver"
+	depends on (ARCH_ROCKCHIP && OF) || COMPILE_TEST
+	select GENERIC_PHY
+	select MFD_SYSCON
+	help
+	  Enable this to support the Rockchip PCIe PHY.
+
 config PHY_ST_SPEAR1310_MIPHY
 	tristate "ST SPEAR1310-MIPHY driver"
 	select GENERIC_PHY
