PCI: rockchip: Add Rockchip PCIe controller support
Add support for the Rockchip PCIe controller found on RK3399 SoC platform.

Change-Id: Ic924a0defaef195575beba4dfc92c33b6b5bc3e7
[Shawn: manually backport to 4.4 with some minor changes]
Signed-off-by: Shawn Lin <shawn.lin@rock-chips.com>
Signed-off-by: Bjorn Helgaas <bhelgaas@google.com>
Reviewed-by: Brian Norris <briannorris@chromium.org>

--- a/drivers/pci/host/Kconfig
+++ b/drivers/pci/host/Kconfig
@@ -175,14 +175,13 @@ config PCI_HISI
 
 config PCIE_ROCKCHIP
 	bool "Rockchip PCIe controller"
-	depends on ARM64 && ARCH_ROCKCHIP
+	depends on ARCH_ROCKCHIP
 	depends on OF
-	select MFD_SYSCON
-	select PCI_MSI
 	select PCI_MSI_IRQ_DOMAIN
+	select MFD_SYSCON
 	help
 	  Say Y here if you want internal PCI support on Rockchip SoC.
-	  There are 1 internal PCIe port available to support GEN2 with
+	  There is 1 internal PCIe port available to support GEN2 with
 	  4 slots.
 
 endmenu
