ARM64: dts: rockchip: add pinctrl gpio config for rk3399
Change-Id: I84800a35a95d1de61e3ddce6e7db92efb24bbf59
Signed-off-by: David Wu <david.wu@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399.dtsi
@@ -1850,6 +1850,18 @@
 			drive-strength = <13>;
 		};
 
+		pcfg_output_high: pcfg-output-high {
+			output-high;
+		};
+
+		pcfg_output_low: pcfg-output-low {
+			output-low;
+		};
+
+		pcfg_input: pcfg-input {
+			input-enable;
+		};
+
 		emmc {
 			emmc_pwr: emmc-pwr {
 				rockchip,pins =
